--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Hello World</title>
+    <title>People Like Me</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -22,15 +22,6 @@
         <h1 class="site-title"><a href="index.html" rel="home"><img src="images/logo.png" alt="Logo"></a></h1>
     </div><!-- .site-branding -->
 
-    <div class="hamburger-menu">
-        <div class="menu-icon">
-            <img src="images/menu-icon.png" alt="menu icon">
-        </div><!-- .menu-icon -->
-
-        <div class="menu-close-icon">
-            <img src="images/x.png" alt="menu close icon">
-        </div><!-- .menu-close-icon -->
-    </div><!-- .hamburger-menu -->
 </header><!-- .site-header -->
 
 <nav class="site-navigation flex flex-column justify-content-between">
@@ -46,7 +37,7 @@
         <li><a href="#">Contact</a></li>
     </ul>
 
-    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </p>
@@ -64,10 +55,19 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 <div class="nav-bar-sep d-lg-none"></div>
 
-<div class="outer-container home-page">
-    <div class="container-fluid">
+<div class="outer-container">
+    <div class="container portfolio-page">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col">
+                <ul class="breadcrumbs flex align-items-center">
+                    <li><a href="#">Home</a></li>
+                    <li>My Purchases</li>
+                </ul><!-- .breadcrumbs -->
+            </div><!-- .col -->
+        </div><!-- .row -->
+
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/1.jpg" alt="">
@@ -84,7 +84,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/2.jpg" alt="">
@@ -101,7 +101,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/3.jpg" alt="">
@@ -118,7 +118,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/4.jpg" alt="">
@@ -135,7 +135,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/5.jpg" alt="">
@@ -152,7 +152,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/6.jpg" alt="">
@@ -169,7 +169,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/7.jpg" alt="">
@@ -186,7 +186,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/8.jpg" alt="">
@@ -203,7 +203,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/9.jpg" alt="">
@@ -220,7 +220,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/10.jpg" alt="">
@@ -237,7 +237,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/11.jpg" alt="">
@@ -254,7 +254,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
 
-            <div class="col-12 col-md-6 col-lg-3 no-padding">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
                         <img src="images/12.jpg" alt="">
@@ -270,14 +270,78 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     </div><!-- .entry-content -->
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
-        </div><!-- .row -->
-    </div><!-- .container-fluid -->
-</div><!-- .outer-container -->
 
-<div class="scroll-down flex flex-column justify-content-center align-items-center d-none d-lg-block">
-    <span class="arrow-down flex justify-content-center align-items-center"><img src="images/arrow-down.png" alt="arrow"></span>
-    <span class="scroll-text">Scroll Down</span>
-</div><!-- .scroll-down -->
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="portfolio-content">
+                    <figure>
+                        <img src="images/1.jpg" alt="">
+                    </figure>
+
+                    <div class="entry-content flex flex-column align-items-center justify-content-center">
+                        <h3><a href="#">Flower Skin</a></h3>
+
+                        <ul class="flex flex-wrap justify-content-center">
+                            <li><a href="#">Portfolio,</a></li>
+                            <li><a href="#">Tree</a></li>
+                        </ul>
+                    </div><!-- .entry-content -->
+                </div><!-- .portfolio-content -->
+            </div><!-- .col -->
+
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="portfolio-content">
+                    <figure>
+                        <img src="images/2.jpg" alt="">
+                    </figure>
+
+                    <div class="entry-content flex flex-column align-items-center justify-content-center">
+                        <h3><a href="#">Flower Skin</a></h3>
+
+                        <ul class="flex flex-wrap justify-content-center">
+                            <li><a href="#">Portfolio,</a></li>
+                            <li><a href="#">Tree</a></li>
+                        </ul>
+                    </div><!-- .entry-content -->
+                </div><!-- .portfolio-content -->
+            </div><!-- .col -->
+
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="portfolio-content">
+                    <figure>
+                        <img src="images/3.jpg" alt="">
+                    </figure>
+
+                    <div class="entry-content flex flex-column align-items-center justify-content-center">
+                        <h3><a href="#">Flower Skin</a></h3>
+
+                        <ul class="flex flex-wrap justify-content-center">
+                            <li><a href="#">Portfolio,</a></li>
+                            <li><a href="#">Tree</a></li>
+                        </ul>
+                    </div><!-- .entry-content -->
+                </div><!-- .portfolio-content -->
+            </div><!-- .col -->
+
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="portfolio-content">
+                    <figure>
+                        <img src="images/4.jpg" alt="">
+                    </figure>
+
+                    <div class="entry-content flex flex-column align-items-center justify-content-center">
+                        <h3><a href="#">Flower Skin</a></h3>
+
+                        <ul class="flex flex-wrap justify-content-center">
+                            <li><a href="#">Portfolio,</a></li>
+                            <li><a href="#">Tree</a></li>
+                        </ul>
+                    </div><!-- .entry-content -->
+                </div><!-- .portfolio-content -->
+            </div><!-- .col -->
+        </div><!-- .row -->
+
+    </div><!-- .container -->
+</div><!-- .outer-container -->
 
 <script type='text/javascript' src='js/jquery.js'></script>
 <script type='text/javascript' src='js/custom.js'></script>
